遊び方の説明の修正

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,6 +27,7 @@
   }
 }
 
+
 /* ui */
 
 .UI{
@@ -39,6 +40,10 @@
 /* Start */
 .start-UI{
   transform: translate(-50%, -60%);
+}
+
+.how-to-play{
+  width: 200px;
 }
 
 /* Game */
